--- a/new-site/new-site.html
+++ b/new-site/new-site.html
@@ -54,7 +54,7 @@
                     design makes your website accessible to all users, regardless of their device. In my spare time, I
                     protect my city Hakkari from evil.I love doing this because I think the city of hakkari is worth
                     it.Even if I have to risk my life, I will not let them touch the city of Hakkari. I can beat you in
-                    one fight Batman</p>
+                    one fight Batman.</p>
                 <button type="button">Let's Talk</button>
             </div>
         </div>
